Bug 360000 -  make 32-bit favicons with transparency work correctly in cairo p=Alfred Kayser <alfredkayser@nl.ibm.com>, r=pavlov, sr=tor